--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,21 +54,18 @@
         </RelativeLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_list_past_places"
+    <ListView
+        android:id="@+id/lw_past_places"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <ListView
-            android:id="@+id/lw_past_places"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:dividerHeight="@dimen/cardview_places_separation"
-            android:divider="@color/defaultBackgroundColor"
-            >
-        </ListView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+        android:paddingTop="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:dividerHeight="@dimen/cardview_places_separation"
+        android:divider="@color/defaultBackgroundColor"
+        android:layout_height="320dp"
+        app:layout_anchor="@id/appbar_profile"
+        app:layout_anchorGravity="bottom"
+        android:layout_gravity="bottom"
+        >
+    </ListView>
 </android.support.design.widget.CoordinatorLayout>
